@@ -11,7 +11,7 @@ $entrydate=$_POST['entrydate'];
 if(isset($_POST['bid'])){$bid=$_POST['bid'];}else{$bid='G';}
 if(isset($_POST['catid'])){$catid=$_POST['catid'];}else{$catid='';}
 if(isset($_POST['ratvalue'])){$ratvalue=$_POST['ratvalue'];}else{$ratvalue='N';}
-if(isset($_POST['newyid'])){$newyid=$_POST['newyid'];}else{$newyid=$Student['YearGroup']['value'];;}
+if(isset($_POST['newyid'])){$newyid=$_POST['newyid'];}else{$newyid=$Student['YearGroup']['value'];}
 if(isset($_POST['guardianemail0'])){$guardianemail=$_POST['guardianemail0'];}else{$guardianemail='no';}
 if(isset($_POST['teacheremail0'])){$teacheremail=$_POST['teacheremail0'];}else{$teacheremail='no';}
 
@@ -21,6 +21,7 @@ include('scripts/sub_action.php');
 	if($bid=='%'){$bid='G';}
 	$category=$catid.':'.$ratvalue.';';
 	$yid=$Student['YearGroup']['value'];
+	$teachername=get_teachername($tid);
 
 	if($id!=''){
 		mysql_query("UPDATE comments SET student_id='$sid',
@@ -33,54 +34,30 @@ include('scripts/sub_action.php');
 		subject_id='$bid', category='$category', teacher_id='$tid';");
 		$id=mysql_insert_id();
 
-		$result[]=get_string('commentrecorded',$book);
-
-		$teachername=get_teachername($tid);
-		$teacher=get_user($tid,'username');
-		if($teacher['email']!='' and $teacher['email']!=' '){$teacheremail=$teacher['email'];}
-
+		/* Message to relevant teaching staff. */
+		if($teacheremail=='yes'){$teachergroup='%';}else{$teachergroup='p';}
 		$footer='--'. "\r\n" . get_string('pastoralemailfooterdisclaimer');
-		$subject='Comment for '.$Student['Forename']['value']
+		$messagesubject='Comment for '.$Student['Forename']['value']
 				.' '.$Student['Surname']['value'].' ('. 
 					$Student['RegistrationGroup']['value'].')'; 
-		$message=$subject."\r\n".'Subject: '. display_subjectname($bid)."\r\n". 
+		$message=$messagesubject."\r\n".'Subject: '. display_subjectname($bid)."\r\n". 
 				'Posted by '.$teachername. "\r\n";
 		$message.="\r\n". $detail. "\r\n";
 		if($guardianemail=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
 			$message.="\r\n Note: this message has been shared with parents.";
 			}
 		$message.="\r\n". $footer;
-		$fromaddress=$CFG->schoolname;
 
-		/* Make lists of academic and pastoral teacher recipients for the email */
-		$precips=(array)list_sid_responsible_users($sid,$bid);
-		$arecips=array();
-		if($teacheremail=='yes'){
-			$arecips=(array)list_student_teachers($sid);
-			}
-		$recipients=array_merge($precips, $arecips);
-
-		if($recipients and $CFG->emailoff!='yes' and $CFG->emailcomments=='yes'){
-			if(sizeof($recipients)>0){
-				$dones=array();
-				foreach($recipients as $key => $recipient){
-					if(!array_key_exists($recipient['username'],$dones)){
-						$recipient['email']=strtolower($recipient['email']);
-						$from['name']=$teachername;$from['email']=$teacheremail;
-						send_email_to($recipient['email'],$from,$subject,$message,'','',true,'','',$db);
-						$result[]=get_string('emailsentto').' '.$recipient['username'];
-						//trigger_error('Email sent to: '.$recipient['username'],E_USER_WARNING);
-						$dones[$recipient['username']]=$recipient['username'];
-						}
-					}
-				}
+		if($CFG->emailcomments=='yes'){
+			$result=(array)message_student_teachers($sid,$tid,$bid,$messagesubject,$message,$teachergroup);
 			}
 
+		/* Optional is messaging student's parents. */
 		$Student=fetchStudent_singlefield($sid,'Boarder');
 		if($guardianemail=='yes' and ($Student['Boarder']['value']=='N' or $CFG->emailboarders=='yes')){
 			$Contacts=(array)fetchContacts_emails($sid);
 			$footer='--'. "\r\n" .get_string('guardianemailfooterdisclaimer');
-			$message=$subject."\r\n". 'Subject: ' .display_subjectname($bid)."\r\n". 
+			$message=$messagesubject."\r\n". 'Subject: ' .display_subjectname($bid)."\r\n". 
 				'Posted by '.$teachername. "\r\n";
 			$message.="\r\n". $detail. "\r\n";
 			$message.="\r\n". $footer;
@@ -90,8 +67,8 @@ include('scripts/sub_action.php');
 					mysql_query("UPDATE comments SET guardians='1' WHERE id='$id';");
 					foreach($Contacts as $index => $Contact){
 						$emailaddress=strtolower($Contact['EmailAddress']['value']);
-						send_email_to($emailaddress,$fromaddress,$subject,$message);
-						$result[]=get_string('emailsentto').' '. 
+						send_email_to($emailaddress,$fromaddress,$messagesubject,$message);
+						$result[]=get_string('emailsentto','infobook').' '. 
 							get_string(displayEnum($Contact['Relationship']['value'],'relationship'),'infobook'). 
 							' '.$Contact['Surname']['value'];
 						}
